# fioneer

./: .gitignore  README.md  pyproject.toml
data/processed/: company_info.csv  earnings_dates.json  sector_industry_info.csv
data/processed/metadata/: A_2024_Q1.json  A_2024_Q2.json
datasets/: ticker_list.json
fioneer/: cli.py
fioneer/config/: __init__.py  settigs.py  settings.py
fioneer/embeddings/: __init__.py  vectorizer.py
fioneer/llm/: openai_client.py
fioneer/ninjas/: __init__.py  ninjas_client.py
fioneer/retrieval/: faiss_retriever.py
scripts/: create_index.py  earnings_to_csv.py  fetch_company_info.py  metadata_extractor.py  sector_categorizer.py  show_earnings_call.py  ticker_fetcher.py  transcripts_to_jsonl.py  upload_to_hf.py
tests/: __init__.py  test_ninjas_client.py  test_vectorizer.py
